# MisakaNet

./: .dockerignore  .gitignore  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  JOIN.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  STATUS.md  counter.json  glama.json  hermes_hub.py  lessons.json  misaka-protocol.json  package-lock.json  package.json  pyproject.toml  requirements.txt  search_knowledge.py  server.json  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
agents/: your_agent.py
data/: README.md  counter.json  dco_benchmark_result.json  leaderboard.json  leaderboard_meta.json  lesson_reuse_benchmark.json  lessons.json  retrieval_noisebench_queries.json  retrieval_noisebench_report.json  sag.db
docs/: CONCEPTS.md  adoption-cases.md  architecture-293.md  benchmark-challenge.md  cli-reference.md  dco-windows.md  debug-pain-index.md  email-intake-examples.md  email-intake.md  fanuc-knowledge-card-2026-07.md  glama-qa-queries.md  glossary.md  index.html  label-system.md  lessons-audit-417.md  llms.txt  mcp.md  private-feedback-intake.md  quality-score.md  quickstart.md  reputation.md  rescue-card-prompt.md  ring0-founder-track.md  robots.txt  sitemap.xml  skill.md  troubleshooting.md  verified-semantics.md
lessons/: LESSON_QUALITY_SCORING.md  TEMPLATE.md  ai-agent-project-outreach-guide.md  auto-merge-ci-pipeline.md  browser-harness-cdp-browser-automation.md  contributor-engagement-retention.md  cronjob-one-shot-race-condition-duplicate-execution.md  index.md  (+15 more)
(+584 files in other folders)
