[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "misakanet"
version = "2.7.0"
description = "AI Agent 分布式经验知识共享系统 — 踩坑一次，全网受益"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "misakanet-core>=2.7.0",
]
keywords = ["ai-agent", "knowledge-base", "bm25", "rag", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Ikalus1988/MisakaNet"
Repository = "https://github.com/Ikalus1988/MisakaNet"

[project.scripts]
misakanet = "search_knowledge:main"
misaka-harvest = "scripts.misaka_harvest:main"

[project.optional-dependencies]
hub = [
    "aiohttp>=3.9",
    "websocket-client>=1.6",
    "chromadb>=0.4",
    "networkx>=3.2",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "keyring>=25",
]
feishu = ["requests>=2.28"]
semantic = ["sentence-transformers>=2.2"]
harvest = [
    "scrapling>=0.4.9",
    "scrapling[fetchers]",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
omit = ["scripts/*"]
